; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/md/extr_dm-raid45.c_stripe_zero_chunk.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/md/extr_dm-raid45.c_stripe_zero_chunk.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.stripe = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.stripe*, i32)* @stripe_zero_chunk to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @stripe_zero_chunk(%struct.stripe* %0, i32 %1) #0 {
  %3 = alloca %struct.stripe*, align 8
  %4 = alloca i32, align 4
  store %struct.stripe* %0, %struct.stripe** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %4, align 4
  %6 = icmp sgt i32 %5, -1
  br i1 %6, label %7, label %15

7:                                                ; preds = %2
  %8 = load %struct.stripe*, %struct.stripe** %3, align 8
  %9 = load i32, i32* %4, align 4
  %10 = load %struct.stripe*, %struct.stripe** %3, align 8
  %11 = getelementptr inbounds %struct.stripe, %struct.stripe* %10, i32 0, i32 0
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = call i32 @stripe_zero_pl_part(%struct.stripe* %8, i32 %9, i32 0, i32 %13)
  br label %15

15:                                               ; preds = %7, %2
  ret void
}

declare dso_local i32 @stripe_zero_pl_part(%struct.stripe*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
